<resources>
    <string name="app_name">Safe House</string>
    <string name="sua_casa_em_seguran_a_n24_horas_por_dia">Sua casa em Segurança\n24 Horas por dia</string>
    <string name="voc_tem_acesso_a_todos_os_v_deos_gravados_nna_palma_da_sua_m_o">Acesso a todos os Vídeos gravados\nna palma da sua mão</string>
    <string name="seguran_a_para_voc_e_sua_familia_nem_qualquer_momento">Segurança para você e sua familia\nem qualquer momento</string>
    <string name="tenha_o_controle_da_sua_casa_natrav_s_do_smartphone">Controle da sua casa\natravés do Smartphone</string>
    <string name="imagem_de_um_smartphone">Imagem de um Smartphone</string>
    <string name="crie_sua_conta_gr_tis">Crie sua conta grátis</string>
    <string name="controle_sua_casa_pelo_seu_smartphone_comece_j">Controle sua casa pelo seu Smartphone, comece já</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="j_tenho_uma_conta">Já tenho uma conta</string>
    <string name="insira_seus_dados_para_o_cadastro">Insira seus dados para o cadastro</string>
    <string name="insira_os_dados_solicitados_npara_cadastrar_se_no_sistema">Insira os dados solicitados\npara cadastrar-se no sistema</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="entre_com_a_conta_da_google">Entre com a conta da Google</string>
    <string name="entre_com_o_facebook">Entre com o Facebook</string>
    <string name="facebook_app_id">491110641420529</string>
    <string name="come_ar">Começar</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="error_login">Erro ao conectar-se com o Facebook</string>
    <string name="cancel_login">Login com o Facebook cancelado</string>
    <string name="textFace">Cadastre-se com o Facebook</string>
    <string name="title_activity_login">activity_login</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="cadastre_se_com_o_google">Cadastre-se com o Google</string>
    <string name="verificando_dados">Verificando dados...</string>
    <string name="salvando_seus_dados">Salvando seus dados...</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_alarme">Meu alarme</string>
    <string name="menu_graficos">Gráficos</string>
    <string name="menu_usuarios">Usuários</string>
    <string name="menu_conta">Minha conta</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>
    <string name="comunica_o">Comunicação</string>
    <string name="remover_foto">Remover foto</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="inserir_foto">Inserir foto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarme">Alarme</string>
    <string name="insira_o_nome_da_nsua_casa">INSIRA O NOME DA\nSUA CASA</string>
    <string name="nome_da_sua_casa">Nome da sua casa</string>
    <string name="exemplo">EXEMPLO</string>
    <string name="textviewToast">TextView</string>
    <string name="gerenciamento_da_sua_nresid_ncia">GERENCIAMENTO DA SUA\nRESIDÊNCIA</string>
    <string name="title_activity_definir_senha_alarme">DefinirSenhaAlarmeActivity</string>
    <string name="cadastrar_usu_rios">Cadastrar Usuários</string>
    <string name="administrador">Administrador</string>
    <string name="comum">Comum</string>
    <string name="usu_rio">Usuário:</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="nome_usu_rio">Nome Usuário</string>
    <string name="email_usu_rio">Email Usuário</string>
    <string name="nome_da_casa">Nome da Casa</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="insira_seu_nome">Insira seu nome</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="insira_a_senha">Insira a senha</string>
    <string name="confirmar">Confirmar</string>
</resources>
