<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitys.CadastroActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagem_logo_app"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/foto_perfil"
            app:civ_border_color="@color/branco_translucido"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hitomi.cmlibrary.CircleMenu
            android:id="@+id/opcoes"
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="18dp"
            android:text="@string/foto_de_perfil"
            app:layout_constraintBottom_toTopOf="@+id/InputNome"
            app:layout_constraintStart_toStartOf="@+id/imagem_logo_app"
            app:layout_constraintTop_toTopOf="@+id/imagem_logo_app" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/InputNome"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="206dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagem_logo_app"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextNomeCasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_pessoa_cinza_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/nome" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/InputEmail"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputNome">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextEmailCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_cinza_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/InputSenha"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputEmail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorOlhoSenha">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextSenhaCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_cadeado_cinza_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/InputConfirmarSenha"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputSenha"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorOlhoSenha">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextConfirmarSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_cadeado_cinza_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/confirme_sua_senha"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="245dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            android:text="@string/come_ar"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputConfirmarSenha" />

        <ProgressBar
            android:id="@+id/progressBarCarregando"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar" />

        <TextView
            android:id="@+id/textViewCarregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/salvando_seus_dados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBarCarregando" />

        <TextView
            android:id="@+id/textViewInserirFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:onClick="inserirFoto"
            android:text="@string/inserir_foto"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/InputNome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>

